<resources>
    <string name="app_name">LocationBasedAnythingFinder</string>
    <string name="anything_finder">Anything Finder</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="signup">signup</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_create_post">Create Post</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_show_on_map">Map</string>
    <string name="title_activity_buttom_nav_dashboard">MainActivity</string>
    <string name="browse_gallery">Browse Gallery</string>
    <string name="open_camera">Open Camera</string>
</resources>