<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="2"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/anything_finder"
        android:textSize="58sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1.5"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <android.widget.Button
            android:id="@+id/btnSignup1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="15dp"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/primary"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <android.widget.Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="15dp"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>
</LinearLayout>