<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Login"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUsername1"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#C0C0C0"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="20dp"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/etPassword1"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#C0C0C0"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textSize="28sp" />

    <android.widget.Button
        android:id="@+id/btnLogin1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/primary"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/tvNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Don't have an account"
        android:textSize="28sp"
        android:textStyle="bold" />
    </LinearLayout>
</ScrollView>